fix: jumping inputs content on validation messages (#1035)

--- a/packages/shared/styles/components/atoms/SfInput.scss
+++ b/packages/shared/styles/components/atoms/SfInput.scss
@@ -4,6 +4,13 @@
   box-sizing: border-box;
   width: var(--input-width);
   height: var(--input-height);
+  min-height: var(
+    --input-height,
+    calc(
+      var(--spacer-base) + var(--spacer-2xs) +
+      var(--input-label-font-size, var(--font-lg))
+    )
+  );
   &__label {
     position: absolute;
     display: var(--input-label-display);
@@ -53,7 +60,7 @@
   }
   &__error-message {
     color: var(--input-error-message-color, var(--c-danger));
-    height: calc(var(--font-xs) * 1.2);
+    min-height: calc(var(--font-xs) * 1.2);
     @include font(
       --input-error-message-font,
       var(--font-medium),
@@ -65,7 +72,6 @@
   &__wrapper,
   input {
     width: 100%;
-    height: 100%;
   }
   &__wrapper {
     position: relative;
